# HomeCleanup-API

./: README.md  main.py  pyproject.toml
app/: main.py
tests/: conftest.py  test_endpoints.py
