[tool.poetry]
name = "homecleanup-api"
version = "0.1.0"
description = ""
authors = ["liviaspereira <liviaspereira@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.70.1"}
sqlmodel = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
